[gd_scene load_steps=12 format=3 uid="uid://4cy83pfhxgqv"]

[ext_resource type="Script" path="res://scenes/character_selection/character_selection.gd" id="1_7enp8"]
[ext_resource type="Resource" uid="uid://bf4mcqpuurmef" path="res://scenes/run/run_initialization.tres" id="2_oqstv"]
[ext_resource type="Texture2D" uid="uid://cqcal03735mv8" path="res://art/tile_0118.png" id="3_nlavo"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="4_i2j2o"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="4_vjgft"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="5_6af5f"]

[sub_resource type="Gradient" id="Gradient_middh"]
colors = PackedColorArray(0.380543, 0.141798, 0.062479, 1, 0.124693, 0.0311219, 0.384992, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v3n7r"]
gradient = SubResource("Gradient_middh")
width = 16

[sub_resource type="LabelSettings" id="LabelSettings_qp05m"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_4f335"]

[sub_resource type="ButtonGroup" id="ButtonGroup_5w3h7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7enp8")
run_init = ExtResource("2_oqstv")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_v3n7r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 12.0
offset_right = 112.0
offset_bottom = 59.0
grow_horizontal = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Warrior"
label_settings = SubResource("LabelSettings_qp05m")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Likes to slice things up."
label_settings = SubResource("LabelSettings_4f335")
horizontal_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 36.0
offset_top = 63.0
offset_right = 76.0
offset_bottom = 103.0
texture = ExtResource("4_vjgft")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 70.0
offset_right = 233.0
offset_bottom = 100.0
theme_override_constants/separation = 15

[node name="WarriorButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_5w3h7")

[node name="Icon" type="TextureRect" parent="HBoxContainer/WarriorButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nlavo")

[node name="WizardButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_5w3h7")

[node name="Icon" type="TextureRect" parent="HBoxContainer/WizardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_i2j2o")

[node name="AssassinButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_5w3h7")

[node name="Icon" type="TextureRect" parent="HBoxContainer/AssassinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_6af5f")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -24.0
offset_right = 30.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[connection signal="pressed" from="HBoxContainer/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="HBoxContainer/WizardButton" to="." method="_on_wizard_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AssassinButton" to="." method="_on_assassin_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
